// Style guide @see https://developers.google.com/protocol-buffers/docs/style and https://docs.buf.build/best-practices/style-guide

syntax = "proto3";

package struct.v1;

message CurrencyAmountDto {
  string currency = 1;
  string amount = 2;
}

message GetEntityByIdParamsDto {
  string id = 1;
}

message OperationResultDto {
  string id = 1;
  optional string status = 2;
}
